[tool.black]
line-length = 160

[tool.poetry]
name = "IT2zBot"
version = "0.1.0"
description = ""
authors = ["Eulentier161 <eulentier161@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.3.2"
pyaml = "^24.4.0"
httpx = "^0.27.0"
uvloop = { version = "^0.19.0", markers = "sys_platform == 'linux'" }
PyJWT = { version = "^2.8.0", extras = ["crypto"] }
cryptography = "^42.0.5"
feedparser = "^6.0.11"
markdownify = "^0.12.1"

[tool.poetry.scripts]
it2zbot = "it2zbot.bot:main"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
