[tool.black]
line-length = 120

[project]
name = "IT2zBot"
version = "0.1.0"
description = ""
authors = [
    {name = "Eulentier161", email = "git@eule.wtf"}
]
requires-python = "<4.0,>=3.10"
dependencies = [
    "discord.py<3.0.0,>=2.3.2",
    "pyaml<25.0.0,>=24.4.0",
    "httpx<1.0.0,>=0.27.0",
    "uvloop<1.0.0,>=0.19.0 ; sys_platform == 'linux' or sys_platform == 'darwin'",
    "PyJWT[crypto]<3.0.0,>=2.8.0",
    "cryptography<43.0.0,>=42.0.5",
    "feedparser<7.0.0,>=6.0.11",
    "markdownify<1.0.0,>=0.12.1",
]


[project.scripts]
it2zbot = "it2zbot.bot:main"

[dependency-groups]
dev = [
    "black<25.0.0,>=24.4.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
